--- a/dp_app/include/UIs/PQDiagramTab.ui
+++ b/dp_app/include/UIs/PQDiagramTab.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>799</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>60</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -154,6 +160,12 @@
      </item>
      <item>
       <widget class="QLabel" name="labelMeasDateValue">
+       <property name="minimumSize">
+        <size>
+         <width>60</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="font">
         <font>
          <bold>false</bold>
@@ -165,7 +177,7 @@
       </widget>
      </item>
      <item>
-      <spacer name="hSpacerRight3">
+      <spacer name="hSpacerRight2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
@@ -190,23 +202,10 @@
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>500</height>
+       <height>16777215</height>
       </size>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="vSpacerBot">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
