- pgTimeAxis.py substitued with DateAxisItem() from pyqtgraph package - Added new AutoReconnectTab.py

--- a/dp_app/include/UIs/XYGraphTab.ui
+++ b/dp_app/include/UIs/XYGraphTab.ui
@@ -116,7 +116,7 @@
      <item row="0" column="10">
       <widget class="QPushButton" name="btnAutoRephase">
        <property name="text">
-        <string>Automatic rephasing</string>
+        <string>Automatic reconnection</string>
        </property>
       </widget>
      </item>
